Amélioration de la présentation sur une page du référentiel

--- a/compétences/référentiel-compétences-éthique-techno-émergentes.tex
+++ b/compétences/référentiel-compétences-éthique-techno-émergentes.tex
@@ -10,12 +10,14 @@
 \geometry{margin=2cm, landscape}
 
 \title{\textbf{Référentiel de compétence éthique et technologie émergentes}}
-\author{Nicolas Louveton -- {\footnotesize \noindent Adapté de Bruneault, F., Sabourin Laflamme, A., \& Mondeaux, A. (2022). \textit{Former à l'éthique de l'IA en enseignement supérieur: Référentiel de compétence.}}}
+\author{Nicolas Louveton} 
 \date{Janvier 2026}
 
 \begin{document}
 
-\maketitle
+\section*{Référentiel de compétence éthique et technologie émergentes}
+
+\noindent Nicolas Louveton, Janvier 2026
 
 \begin{longtable}{|>{\raggedright}p{0.12\textwidth}|>{\raggedright}p{0.21\textwidth}|>{\raggedright}p{0.21\textwidth}|>{\raggedright}p{0.21\textwidth}|>{\raggedright\arraybackslash}p{0.21\textwidth}|}
 \hline
@@ -54,6 +56,6 @@ Expliquez la priorisation des normes qui justifient sa propre position et appré
 
 \end{longtable}
 
-
+\noindent Adapté de Bruneault, F., Sabourin Laflamme, A., \& Mondeaux, A. (2022). \textit{Former à l'éthique de l'IA en enseignement supérieur: Référentiel de compétence.}
 
 \end{document}
